# 94140

./: .flake8  .gitignore  README.md  app.py  application.py  buildspect.yml  conf.py  init_db.py  pyproject.toml  requirements.txt
.ebextensions/: 01_flask.config  environmentvariables.config  logging.config
.github/: dependabot.yml
.github/workflows/: pytest.yml
admin/: __init__.py  base.py  basket.py  member.py  order.py  product.py  purchase.py  subscription.py
cds/admin/: __init__.py  member.py  subscription.py
cds/endpoints/: hello_asso.py  member.py
cds/models/: member.py  subscription.py
cds/repository/: member_repository.py
cds/services/: member_service.py
cds/tests/: conftest.py
cds/utils/: hello_asso.py
endpoints/: hello_asso.py  home.py  measurement.py  python.py  youtube.py
migrations/versions/: 046566ba65e3_initial_migration.py  (+1 more)
models/: base.py  basket.py  measurement.py  product.py  purchase.py  shop.py
models/cds/: member.py  (+2 more)
repository/: base_repository.py  measurement_repository.py  shop_repository.py  user_repository.py
schemas/: measurement.py  order.py
services/: measurement_service.py  user_service_.py
static/: data.csv  data_save.csv  index.js
templates/: 403.html  404.html  base.html  camera.html  index.html  index2.html  liste_membres.html  login.html  measurements.html  python.html  youtube.html
tests/: conftest.py  test_conftest.py
translations/: messages.pot
utils/: carrefour_bill_pdf_parser.py  datetime_tools.py  hello_asso.py  import_export_measurements.py  init_db.py  scheduler.py  strings.py
(+36 files in other folders)
